Cros splitscreen: Fix the crash when selecting an unsnappable window in overview mode.

Bug: 780128
Change-Id: I19e07e2675a117830632eeefff824cb74e8ed23e
Reviewed-on: https://chromium-review.googlesource.com/747685
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513544}
Former-commit-id: 6d5701695d9fed52856c9bbc2952558d0bf85773